feat(ai): add scoped project workflows